# supercells

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
supercells/: __init__.py  __main__.py  config.py  main.py  supercells.py
supercells/modules/: cellranger.py  general.py
