[metadata]
name = supercells
version = 0.0.1
author = Compugen LTD
author_email = royg@cgen.com
description = Easily assess quality control data across multiple single cell datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compugen-ltd/supercells
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pandas